2007-07-25  Diego Escalante Urrelo  <diegoe@gnome.org>

	* src/ephy-tab.c:

	Update tab title when the statusbar text is updated, so we don't have
	out of sync messages (like "Loading <page-you-were-before>"). Fixes
	bug #318947.

2007-07-25  Diego Escalante Urrelo  <diegoe@gnome.org>

	* src/ephy-notebook.c:

	Checks that if we are dragging an element of type
	EPHY_DND_URI_LIST_TYPE we don't reuse an already existing tab to open
	the first element of the list. Fixes bug #313636.

2007-07-25  Diego Escalante Urrelo  <diegoe@gnome.org>

	* src/prefs-dialog.c:
	* data/glade/prefs-dialog.glade:

	Added a checkbox for smooth scrolling. Fixes bug #162489.

2007-07-21  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* lib/ephy-stock-icons.c: (ephy_stock_icons_init):
	* lib/ephy-stock-icons.h:
	* src/ephy-window.c:

	Remove some icons from the context menu, and use better
	ones for some menu items. Reported by Andreas Nilsson.
	Patch by Cosimo Cecchi. Fixes bug #410223.

2007-07-16  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* src/bookmarks/ephy-bookmark-factory-action.c:
	(ephy_bookmark_factory_action_new):
	* src/bookmarks/ephy-bookmarks.c: (ephy_bookmarks_init),
	(ephy_bookmarks_get_topic_uri):
	* src/bookmarks/ephy-topic-factory-action.c:
	(ephy_topic_factory_action_new):

	String changes based on user feedback:
	- "Local sites" -> "Nearby sites" (because it is a
	better description)
	- Drop the "Quick" prefix from Topic/Bookmark items in
	toolbar editor, because it has no function besides
	confusing users.

2007-07-16  Christian Persch  <chpe@gnome.org>

	* configure.ac:
	* doc/reference/Makefile.am:
	* embed/Makefile.am:
	* embed/mozilla/Makefile.am:
	* plugins/desktop-file/Makefile.am:
	* src/Makefile.am:

	s/MOZILLA/GECKO/g for consistency with gge.

2007-07-15  Christian Persch  <chpe@gnome.org>

	* embed/mozilla/EphyBrowser.cpp:
	* embed/mozilla/EphyHeaderSniffer.cpp:
	* embed/mozilla/EphyHistoryListener.cpp:
	* embed/mozilla/EphyPromptService.cpp: