@@ -1,5 +1,12 @@
 2007-07-25  Diego Escalante Urrelo  <diegoe@gnome.org>
 
+	* embed/downloader-view.c:
+
+	Make the status icon clickable so it shows/hides the download window,
+	works across workspaces. Patch by Kraai. Fixes bug #448610.
+
+2007-07-25  Diego Escalante Urrelo  <diegoe@gnome.org>
+
 	* src/ephy-tab.c:
 
 	Update tab title when the statusbar text is updated, so we don't have
